	PR fortran/31764

* simplify.c (gfc_simplify_new_line): NEW_LINE can be simplified
	even for non constant arguments.

	* gfortran.dg/new_line.f90: Add new checks.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@124482 138bc75d-0d04-0410-961f-82ee72b054a4